--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -767,7 +767,7 @@
                          <div class="row">
                            <div class="col-md-12 margin-bottom-10">
                           <p class⁼"lead"=""><strong>Send an Email to :</strong> </p>
-                          <form ng-submit="sendEmail(email)" class="ng-pristine ng-invalid ng-invalid-required">
+                          <form  class="ng-pristine ng-invalid ng-invalid-required">
                                             <div class="form-group">
                                             <input required="" class="form-control ng-pristine ng-invalid ng-invalid-required" autofocus="" type="text" placeholder="To" id="messageSubject" ng-model="email.to">
                                             </div>
@@ -785,7 +785,7 @@
                                              </div>
                                          <div class="pull-right">
 
-                                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Send">
+                                            <input ng-click="sendEmail(email)" ng-disabled="isLoading" type="submit" class="btn green" value="Send">
 
 
                                           </div>
@@ -1484,7 +1484,7 @@
               </div>
                     <div class="modal-footer">
                      <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                      <button  type="submit " ng-submit="saveOpp(opportunity)" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
+                      <button  type="submit " ng-click="saveOpp(opportunity)" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
                      </div>
                    </form>
                    </div>
@@ -1545,7 +1545,7 @@
             </div>
             <div class="modal-body pickerin">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="addTask(task)" class="ng-pristine ng-valid">
+                                          <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="Add a new task" id="taskTitle" ng-model="task.title">
 
                                                   <p><strong>{{_("When's it due?")}}</strong></p>
@@ -1558,8 +1558,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Add this task">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-hide="isLoading" ng-click="addTask(task)" type="submit" class="btn green" value="Add this task">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
 
             </form>
             </div>
@@ -1575,7 +1575,7 @@
             </div>
             <div class="modal-body">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="createDocument(newdocument)" class="ng-pristine ng-valid">
+                                          <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="Enter a new <%=mimeType%> name" id="taskTitle" ng-model="newdocument.title" required>
 
 
@@ -1584,7 +1584,7 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document">
+               <input ng-hide="isLoading" ng-click="createDocument(newdocument)" type="submit" class="btn green" value="Create this document">
                 <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
 
             </form>
@@ -1603,7 +1603,7 @@
             </div>
             <div class="modal-body">
                      <div class="controls controls-row">
-                            <form id="addTask" ng-submit="addEvent(ioevent)" class="ng-pristine ng-valid">
+                            <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="{{_('Add a new event')}}" id="taskTitle" ng-model="ioevent.title">
                                                   <p><strong>{{_("When?")}}</strong></p>
                                                 <div class="row">
@@ -1624,7 +1624,7 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="{{_('Add this event')}}">
+               <input ng-hide="isLoading" ng-click="addEvent(ioevent)" type="submit" class="btn green" value="{{_('Add this event')}}">
                 <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
 
             </form>
