--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -143,7 +143,7 @@
                           Or just add notes to remember what's important.
                           <br>
                         </p>
-                        <form id="addNote" ng-submit="addNote(note)" class="ng-pristine ng-valid">
+                        <form id="addNote"class="ng-pristine ng-valid">
                           <div class="form-group">
                             <input class="form-control ng-pristine ng-valid" autofocus="" type="text" placeholder="Add a new subject" id="messageSubject" ng-model="note.title">
                           </div>
@@ -151,7 +151,7 @@
                             <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>
                           </div>
                           <div class="pull-right">
-                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Add this note">
+                            <input ng-disabled="isLoading"  ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
                           </div>
                         </form>
                       </div>
@@ -486,7 +486,7 @@
                            <div class="row">
                              <div class="col-md-12  margin-bottom-10">
                           <p class⁼"lead"=""><strong>Send an Email to :</strong> </p>
-                          <form  ng-submit="sendEmail(email)" class="ng-pristine ng-valid">
+                          <form  class="ng-pristine ng-valid">
                                             <div class="form-group">
                                             <input required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="To" id="messageSubject" ng-model="email.to">
                                             </div>
@@ -504,7 +504,7 @@
                                              </div>
                                          <div class="pull-right">
 
-                                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Send">
+                                            <input   ng-click="sendEmail(email)" ng-disabled="isLoading" type="submit" class="btn green" value="Send">
 
 
                                           </div>
@@ -696,7 +696,7 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addMember" name="addaccount" ng-submit="share(slected_memeber)" class="form-horizontal">
+                 <form id="addMember" name="addaccount" class="form-horizontal">
                   <fieldset>
 
                     <p>Who has access:</p>
@@ -747,7 +747,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit"  ng-click="share(slected_memeber)" class="btn blue addContactNow">{{_("Share")}}</button>
               </div>
                </form>
                </div>
@@ -807,7 +807,7 @@
             </div>
             <div class="modal-body">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="createDocument(newdocument)" class="ng-pristine ng-valid">
+                                          <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="Enter a new <%=mimeType%> name" id="taskTitle" ng-model="newdocument.title" required>
 
 
@@ -816,7 +816,7 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 
-               <input  type="submit" class="btn green" value="Create this document">
+               <input  type="submit" ng-click="createDocument(newdocument)" class="btn green" value="Create this document">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
 
             </form>
