--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -939,6 +939,84 @@
               </div>
               </div>
             </div>
+                  <!--HKA 19.11.2013 Case Modal -->
+    <div id="addCaseModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">{{_("New Case")}}</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="addCase" name="addCase"  class="form-horizontal"> 
+                
+                  
+                    
+
+                    
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Name")}} </label>
+                       
+                        <div class="col-md-9">
+                          <input type="text" class="form-control"  id="id_name" ng-model="casee.name">
+                          
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Priority")}} </label>
+                       
+                        <div class="col-md-9">
+                           <select class="form-control" ng-model="casee.priority">
+                            <option value="1">1 - Low</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10 - Critical</option>
+                          </select>
+                          
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Status")}}</label>
+                       
+                        <div class="col-md-9">
+                            <select  class="form-control" ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
+                            <option value="">Choose Status</option>
+                            <!--option value=""><%=status_selected.status%></option-->
+                          </select>
+                          
+                        </div>
+                      
+                    </div>
+                    <!--div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
+                       
+                        <div class="col-md-9">
+                          <input type="text" class="form-control"  id="id_description" ng-model="casee.type_case">
+                          
+                        </div>
+                    </div-->
+                   
+
+                  
+                
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <button  type="submit" ng-click="saveCase(casee)" class="btn green addContactNow">{{_("Add Case")}}</button>
+              </div>
+               </form>
+               </div>
+               </div>
+          </div>
+               
+                      <!--HKA 19.11.2013  End Case Modal -->
 
       <!--HKA 11.10.2013 Edit Tagline -->
              <div id="EditTagModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
