--- a/templates/base.html
+++ b/templates/base.html
@@ -526,6 +526,7 @@
   <script src="static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
   <script src="static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
   <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
+  <script src="static/plugins/jquery-textfill/jquery.textfill.min.js" type="text/javascript" ></script>
   <script src="static/bootstrap3/plugins/select2/select2.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
   <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
