--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -145,7 +145,7 @@
   </div>
   <div class="col-md-3 col-sm-3 col-xs-3">
       <div class="row">
-        <div class="pull-right" ng-show="!blankStateaccount"> 
+        <div class="pull-right" > 
          <a href="/#/accounts/new" class="btn red newBtn">
                         New Account 
          </a>
