New design on Opportunity  list
Former-commit-id: 1895e656feadc480f513af3481e459fa37b1502d [formerly 381d5703f31bce3d60108446136d66079a255eca]
Former-commit-id: cf0b0e32a0f964173c0acb817b80ee922109e495

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -1,11 +1,10 @@
 <div class="row subHeader">
-  <div class="currentApp">
-    <h2 class="page-title">
+  <div class="subHContent">
+    <div class="currentApp">
+     <h2 class="page-title">
       <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
       {{active_app.label}}
     </h2>
-  </div>
-  <div class=" subHeaderContent">
     <div class="pull-right sharebuttonDiv" ng-show="!blankStateopportunity">
       <div class="btn-group btn-filter">
         <a class="btn btn-default" href="#" data-toggle="dropdown">
@@ -32,7 +31,8 @@
         </ul>
       </div>
     </div>
-    <h2 class="page-title">{{ _("Opportunities") }} </h2>
+    
+  </div>
   </div>
 </div>
 <div  class="page-content">
@@ -53,14 +53,23 @@
   </div>
   <!-- $cards container -->
   <div class="row ">
-    <div class="col-md-9" ng-show="isSignedIn" style="">
-  <div class="btn-group newBtn">
-     <a class="btn red " href="/#/opportunities/new" >
-     {{ _("New Opportunity") }}</a>
-  </div>
+   <div class="col-md-9">
+     <div class="row subHeaderContainer">
+        <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
+           <div class="row">
+              <h2 class="page-title">{{ _("Opportunities") }} </h2>
+           </div>
+        </div>
+     <div class="col-md-3 col-sm-3 col-xs-3">
+        <div class="row">
+         <div class="pull-right" > 
+           <a href="/#/opportunities/new" class="btn red newBtn">
+                        {{ _('New Opportunity') }} 
+          </a>
+         </div>
+         </div>
     </div>
-
-    <div class="col-md-9">
+  </div>
     <div class="row">
       <div class="tab-pane">
       <div class="row">
@@ -444,4 +453,5 @@
         defaultContainerWidth: 800,
         autoresize: true
       });
+ $('.textfill').textfill({debug: true, maxFontPixels: 16});
 </script>
