New design on Case list
Former-commit-id: a2b7352f2915fd29f655775efbaaa8f324cd6594 [formerly 58948419bbf3b3fc4ae23d2f82139067db13c84d]
Former-commit-id: 49676bc4bdbad169b9dd51c5ffae82d3f9cc030a

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -255,4 +255,5 @@
         defaultContainerWidth: 800,
         autoresize: true
       });
+$('.textfill').textfill({debug: true, maxFontPixels: 16});
 </script>
