--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -1,11 +1,10 @@
 <div class="row subHeader">
-  <div class="currentApp">
-    <h2 class="page-title">
+  <div class="subHContent">
+    <div class="currentApp">
+     <h2 class="page-title">
       <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
       {{active_app.label}}
     </h2>
-  </div>
-  <div class=" subHeaderContent">
     <div class="pull-right sharebuttonDiv"> 
       <div class="btn-group btn-filter">
         <a class="btn btn-default" href="#" data-toggle="dropdown">
@@ -33,7 +32,7 @@
         </ul>
       </div>
     </div>
-    <h2 class="page-title">{{ _("Cases") }} </h2>
+     </div>
   </div>
 </div>
 <div  class="page-content">
@@ -58,12 +57,26 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-    <div class="col-md-9"> 
-        <a href="/#/cases/new" class="btn red newBtn">
-                    {{ _("New Case") }} 
-        </a>
-    </div>
+   
     <div class="col-md-9">
+     <div class="row subHeaderContainer">
+        <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
+           <div class="row">
+              <h2 class="page-title">{{ _("Cases") }} </h2>
+           </div>
+        </div>
+      <div class="col-md-3 col-sm-3 col-xs-3">
+        <div class="row">
+         <div class="pull-right" > 
+           <a href="/#/cases/new" class="btn red newBtn">
+                       {{ _(" New Case") }} 
+          </a>
+        </div>
+         </div>
+       </div>
+    </div>
+  <div class="row">      
+  <div class="col-md-12">
      <div class="row">
       <div class="tab-pane">
       <div class="row">
@@ -162,6 +175,8 @@
     </div>
     </div>
     </div>
+    </div>
+  </div>
   </div>
       <div class="col-md-3 ">
       <div class="row">
@@ -363,7 +378,8 @@
           colMinWidth: 200, 
           defaultContainerWidth: 800,
           autoresize: true
-        });            
+        });  
+$('.textfill').textfill({debug: true, maxFontPixels: 16});          
                
 </script>
 
