replace ng-submit by ng-click on Event, Task, Note, Document page
Former-commit-id: f7d7169367d1968d9e10bd2a4119455c71a049a2 [formerly 8ca6f5fd614ae911e7b915b30b0c2d41f3c8d7ec]
Former-commit-id: af6bb46b2154e1f4b6924eaaf91809714d11ad80

--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -89,12 +89,12 @@
             <div class="row comments-block">
               <div class="col-md-12">
                 <p class⁼"lead"><strong>{{ _("Discuss this message") }}</strong> </p>
-                  <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
+                  <form id="addComment" class="ng-pristine ng-valid">
                     <div class="form-group">
                       <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
                     </div>
                     <div class="pull-right">
-                      <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
+                      <input ng-hide="isLoading" ng-click="addComment(comment)"  type="submit" class="btn green" value="Add comment">
                       <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                     </div>
                   </form>
