--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -215,7 +215,7 @@
              <div class="portlet">
                 <div class="portlet-body">
                      <p class⁼"lead"=""><strong>Add New Comment :</strong> </p>
-                      <form id="addComment" ng-submit="addComment(comment)" class=" ng-pristine ng-valid">
+                      <form id="addComment"  class=" ng-pristine ng-valid">
                       <div class="form-group">
                                         <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
                                       
@@ -223,7 +223,7 @@
                                      
                        <div class="pull-right">
                       
-                        <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
+                        <input ng-hide="isLoading" ng-click="addComment(comment)" type="submit" class="btn green" value="Add comment">
                         <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                         </div>
                                   <div class="clearfix"></div>
