--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -448,22 +448,7 @@
                               </div><!--/inner-cards-container-->
                               </div>
                             </div>
-                            <div class="row">
-                             <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
 
-
-                                        <button ng-click="ContactlistPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="contactpagination.prev" style="display: none;">
-                                        Prev
-                                        </button>
-                                        <button ng-click="ContactlistNextPageItems()" class="btn" ng-show="contactpagination.next" style="display: none;">
-                                        Next
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
-                              </div>
-                              </div>
 
                       </div>
                 <!-- $ needs tab -->
@@ -594,23 +579,7 @@
                               </div>
                               </div>
                             </div>
-                            <div class="row">
-                              <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
 
-
-                                        <button ng-click="OppPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="opppagination.prev" style="display: none;">
-                                        Prev
-                                        </button>
-
-                                        <button ng-click="OpplistNextPageItems()" class="btn" ng-show="opppagination.next" style="display: none;">
-                                        Next
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
-                              </div>
-                              </div>
 
 
                       </div>
@@ -628,6 +597,25 @@
                             <div class="row">
 
                              <!-- ngRepeat: casee in cases -->
+                              <div  class="col-md-4 responsive" ng-repeat="casee in cases" data-tablet="span6" data-desktop="span4">
+                                <div class="dashboard-stat cards-small">
+
+                                  <div class="details">
+                                    <a href="/#/cases/show/<%= casee.id %>"><h3 class="relatedcardOppTitle">
+                                     <%=casee.name%>
+                                    </h3></a>
+                                    <div class="desc">
+                                    <span class="contact-title" ng-show="casee.status">Status:<a  class="desc" href="/#/search/type:Case <%=casee.status%>"># <%=casee.status%></a></span> <br>
+                                    <span ng-show="casee.priority" class="contact-title" >Priority:<a class="desc" href="/#/search/type:Case <%=casee.priority%>">#<%=casee.priority%> </a></span><br>
+                                      <span ng-show="casee.type_case" class="contact-title" >Labels :<a class="desc" href="/#/search/type:Case <%=casee.type_case%>">#<%=casee.type_case%></a>  </span>
+
+                                    </div>
+                                  </div>
+                                  <a class="more" href="/#/cases/show/<%=casee.id%>">
+                                  View more <i class="m-icon-swapright m-icon-white"></i>
+                                  </a>
+                                </div>
+                              </div>
                               <div ng-show="blankStatecase" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                           <div class="dashboard-stat cards">
 
@@ -645,23 +633,7 @@
                               </div>
                               </div>
                             </div>
-                             <div class="row">
-                             <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
 
-
-                                        <button ng-click="CasePrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="casepagination.prev" style="display: none;">
-                                        Prev
-                                        </button>
-
-                                        <button ng-click="CaselistNextPageItems()" class="btn" ng-show="casepagination.next" style="display: none;">
-                                        Next
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
-                              </div>
-                              </div>
 
                 </div>
                 <!-- $ documents tab -->
@@ -948,23 +920,23 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("New Case")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addCase" name="addCase"  class="form-horizontal"> 
-                
-                  
-                    
+                 <form id="addCase" name="addCase"  class="form-horizontal">
 
-                    
+
+
+
+
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Name")}} </label>
-                       
+
                         <div class="col-md-9">
                           <input type="text" class="form-control"  id="id_name" ng-model="casee.name">
-                          
+
                         </div>
                     </div>
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Priority")}} </label>
-                       
+
                         <div class="col-md-9">
                            <select class="form-control" ng-model="casee.priority">
                             <option value="1">1 - Low</option>
@@ -978,34 +950,34 @@
                             <option value="9">9</option>
                             <option value="10">10 - Critical</option>
                           </select>
-                          
+
                         </div>
                     </div>
-                    
+
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Status")}}</label>
-                       
+
                         <div class="col-md-9">
                             <select  class="form-control" ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
                             <option value="">Choose Status</option>
                             <!--option value=""><%=status_selected.status%></option-->
                           </select>
-                          
+
                         </div>
-                      
+
                     </div>
                     <!--div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
-                       
+
                         <div class="col-md-9">
                           <input type="text" class="form-control"  id="id_description" ng-model="casee.type_case">
-                          
+
                         </div>
                     </div-->
-                   
 
-                  
-                
+
+
+
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
@@ -1015,7 +987,7 @@
                </div>
                </div>
           </div>
-               
+
                       <!--HKA 19.11.2013  End Case Modal -->
 
       <!--HKA 11.10.2013 Edit Tagline -->
@@ -1605,7 +1577,7 @@
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
                <input  type="submit" class="btn green" value="{{_('Add this event')}}" ng-click="addEvent(ioevent)">
-               
+
 
 
             </div>
