redeign  save button for new account
Former-commit-id: 234230594c10e71f38b6cac496b6fa2184d26634 [formerly 88439c4647cc3454f7f3cf88c6f083442df7c06c]
Former-commit-id: f842fe8b2fed94f3ac02b165aef925c152a9fa47

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -46,7 +46,13 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-       <div class="showPage slimForm col-md-9">             
+  <div class="col-md-9">
+    <div class="row">
+        <div class="showPage col-md-12 newActionsBtn">
+          <span>Creating now Account bla bla bla</span>
+          <button class="btn red newAccountBtn " ng-click="save(account)">Create</button>
+        </div>
+       <div class="showPage slimForm col-md-12 margin-bottom-15">             
                      <div class="row">
               <div class="col-md-12">
               <!-- BEGIN PORTLET-->
@@ -287,16 +293,17 @@
                           
                         </div>
                         <div class="col-md-12">
-                        <div class="pull-right margin-bottom-15"> 
+                        <div class=""> 
                                 
-                                <button class="btn red jfk-button jfk-button-action" ng-click="save(account)">
+                                <button class="btn red" ng-click="save(account)">
                                   Create
                                 </button>
                           </div>
                       </div>
             </div>
        </div> 
-
+           </div>
+       </div> 
             </div>
               <div class="col-md-3 ">
                   <div class="row">
