before merge from iogrow
Former-commit-id: 6ba396123f99606753e7b6386e18ce63149f42ee [formerly eec8e4f43cde4c97272123f4b9f603165b0e2d3c]
Former-commit-id: 38952da0cfde00c35cce91485f29f43e34544b01

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -900,7 +900,7 @@
               </div>
 
               <div class="modal-body">
-                 <form id="editAccount" name="editlead" ng-submit="updatAccountHeader(account)" class="form-horizontal">
+                 <form id="editAccount" name="editlead"  class="form-horizontal">
 
 
                   <div class="form-group">
@@ -933,7 +933,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+                <button  type="submit" ng-click="updatAccountHeader(account)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
               </div>
                </form>
               </div>
