--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -12,10 +12,10 @@
       </a>
     </div>
     <h2 class="page-title" >
-      <a href="/#/contacts/" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
+      <a href="/#/contacts/" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="{{ _("Back to Contacts") }}">
         <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
       </a>
-      <%=attachment.about.kind%> >
+      {{ _("Contacts") }} >
       <a editable-text="contact.firstname"  onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)">
         <%= contact.firstname %>
       </a>
@@ -121,16 +121,16 @@
                     <a ng-click="waterfall(); selectedTab = 3;">Contacts</a>
                   </li-->
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 7}">
-                    <a ng-click="waterfall();selectedTab = 7;">Attach Documents</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 7;">Attach Documents</a>
                   </li>
                   <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                     <a ng-click="selectedTab = 4;">Needs</a>
                   </li> -->
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 5}">
-                    <a ng-click="selectedTab = 5;">Opportunities</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 5;">Opportunities</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 6}">
-                    <a ng-click="selectedTab = 6;">Cases</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 6;">Cases</a>
                   </li>
                   <li class="dropdown md-menu-inv">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -205,18 +205,6 @@
                         </div>
                       </li>
                     </ul>
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="pagination pull-right">
-                          <button ng-click="TopiclistPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="topicpagination.prev" style="display: none;">
-                            Prev
-                          </button>
-                          <button ng-click="TopiclistNextPageItems()" class="btn" ng-show="topicpagination.next" style="display: none;">
-                            Next
-                          </button>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
                 <!-- $ about tab -->
@@ -455,22 +443,7 @@
                               </div><!--/inner-cards-container-->
                               </div>
                             </div>
-                            <div class="row">
-                             <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
 
-
-                                        <button ng-click="ContactlistPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="contactpagination.prev" style="display: none;">
-                                        Prev
-                                        </button>
-                                        <button ng-click="ContactlistNextPageItems()" class="btn" ng-show="contactpagination.next" style="display: none;">
-                                        Next
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
-                              </div>
-                              </div>
 
                       </div>
                 <!-- $ needs tab -->
@@ -741,13 +714,13 @@
                           <div class="col-md-12">
                             <div class="row">
                              <!-- ngRepeat: attachment in documents -->
-                                   <div class="col-md-12 waterfall2" ng-hide="blankStateaccount">
-                                      <div ng-repeat="attachment in documents" data-column="<%=getPosition($index)%>" class="cardElement"  ng-class="{rightcards: getPosition($index)==4}">
+                                   <div class="col-md-12 waterfall2" ng-hide="blankStatdocuments">
+                                      <div ng-repeat="attachment in documents"  class="cardElement"  >
                                           <div class="detailsSection">
                                             <div class="head">
                                               <div class="pic">
                                                   <a href="/#/documents/show/<%= attachment.id %>" class="startup-link" title="attachment.title">
-                                                  <img ng-show="account.logo_img_id" alt="account.name" class="google-drive-icon img-responsive img-thumbnail" ng-src="/static/img/google_drive/<%=attachment.mimeType%>.png" >
+                                                  <img  alt="attachment.title" class="google-drive-icon img-responsive img-thumbnail" ng-src="/static/img/google_drive/<%=attachment.mimeType%>.png" >
                                                   </a>
                                               </div>
                                               <div class="text">
@@ -779,23 +752,7 @@
                               </div>
 
                             </div>
-                           <div class="row">
-                             <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
 
-
-                                        <button ng-click="DocumentPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="documentpagination.prev" style="display: none;">
-                                        Prev
-                                        </button>
-
-                                        <button ng-click="DocumentlistNextPageItems()" class="btn" ng-show="documentpagination.next" style="display: none;">
-                                        Next
-                                        </button>
-
-                                    </div>
-                                    <!--h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3-->
-                              </div>
-                              </div>
                       </div>
                 <!-- $ send email tab -->
                 <div class="tab-pane active" id="tab_1_8" ng-show="selectedTab == 8" style="display: none;">
@@ -1836,5 +1793,6 @@
               defaultContainerWidth: 840,
               autoresize: true
           });
+
 
 </script>
